--- a/css_grid/src/App.css
+++ b/css_grid/src/App.css
@@ -4,12 +4,13 @@
   border: 1px solid red;
   text-align: center;
   background-color: red;
-  opacity: .1;
+  opacity: .2;
 }
 .Grid-item-2 {
   grid-column: 1/4;
   grid-row: 2;
   border: 1px solid red;
+  border-top: 2px solid green;
   text-align: center;
   background-color: red;
   opacity: .2;  
@@ -18,6 +19,7 @@
   grid-column: 1/4;
   grid-row: 3;
   border: 1px solid red;
+  border-top: 4px solid green;
   text-align: center;
   background-color: red;
   opacity: .3;  
@@ -26,6 +28,7 @@
   grid-column: 1/4;
   grid-row: 4;
   border: 1px solid red;
+  border-top: 6px solid green;
   text-align: center;
   background-color: red;
   opacity: .4;
@@ -34,6 +37,7 @@
   grid-column: 1/4;
   grid-row: 5;
   border: 1px solid red;
+  border-top: 8px solid green;
   text-align: center;
   background-color: red;
   opacity: .5;
@@ -42,6 +46,7 @@
   grid-column: 1/4;
   grid-row: 6;
   border: 1px solid red;
+  border-top: 10px solid green;
   text-align: center;
   background-color: red;
   opacity: .6;
