blue grid gradient with hover effect

--- a/css_grid/src/App.css
+++ b/css_grid/src/App.css
@@ -1,55 +1,72 @@
 .Grid-item-1{
   grid-column: 1/4;
-  grid-row: 1/7;
-  border: 1px solid red;
+  grid-row: 1;
   text-align: center;
-  background-color: red;
-  opacity: .2;
+  background-color: #9999ff;
+  opacity: .5;
+}
+.Grid-item-1:hover {
+  background-color: #6666ff;
 }
 .Grid-item-2 {
   grid-column: 1/4;
   grid-row: 2;
-  border: 1px solid red;
-  border-top: 2px solid green;
   text-align: center;
-  background-color: red;
-  opacity: .2;  
+  background-color: #9999ff;
+  opacity: .3;  
+}
+.Grid-item-2:hover {
+  background-color: #6666ff;
 }
 .Grid-item-3 {
   grid-column: 1/4;
   grid-row: 3;
-  border: 1px solid red;
-  border-top: 4px solid green;
   text-align: center;
-  background-color: red;
-  opacity: .3;  
+  background-color: #9999ff;
+  opacity: .4;  
+}
+.Grid-item-3:hover {
+  background-color: #6666ff;
 }
 .Grid-item-4 {
   grid-column: 1/4;
   grid-row: 4;
-  border: 1px solid red;
-  border-top: 6px solid green;
   text-align: center;
-  background-color: red;
-  opacity: .4;
+  background-color: #9999ff;
+  opacity: .5;
+}
+.Grid-item-4:hover {
+  background-color: #6666ff;
 }
 .Grid-item-5 {
   grid-column: 1/4;
   grid-row: 5;
-  border: 1px solid red;
-  border-top: 8px solid green;
   text-align: center;
-  background-color: red;
-  opacity: .5;
+  background-color: #9999ff;
+  opacity: .6;
+}
+.Grid-item-5:hover {
+  background-color: #6666ff;
 }
 .Grid-item-6 {
   grid-column: 1/4;
   grid-row: 6;
-  border: 1px solid red;
-  border-top: 10px solid green;
   text-align: center;
-  background-color: red;
-  opacity: .6;
+  background-color: #9999ff;
+  opacity: .7;
+}
+.Grid-item-6:hover {
+  background-color: #6666ff;
+}
+.Grid-item-7 {
+  grid-column: 1/4;
+  grid-row: 7;
+  text-align: center;
+  background-color: #9999ff;
+  opacity: .8;
+}
+.Grid-item-7:hover {
+  background-color: #6666ff;
 }
 .Grid-container {
   display: grid;
