--- a/css_grid/src/App.css
+++ b/css_grid/src/App.css
@@ -1,76 +1,24 @@
 .Grid-item-1{
-  grid-column: 1/4;
+  grid-column: 1/7;
   grid-row: 1;
   text-align: center;
-  background-color: #9999ff;
-  opacity: .5;
-}
-.Grid-item-1:hover {
-  background-color: #6666ff;
+  border: 1px solid darkblue;
 }
 .Grid-item-2 {
-  grid-column: 1/4;
-  grid-row: 2;
+  grid-column: 1/7;
+  grid-row: 2/6;
   text-align: center;
-  background-color: #9999ff;
-  opacity: .3;  
-}
-.Grid-item-2:hover {
-  background-color: #6666ff;
+  border: 1px solid darkblue;
 }
 .Grid-item-3 {
-  grid-column: 1/4;
-  grid-row: 3;
+  grid-column: 1/7;
+  grid-row: 6/7;
   text-align: center;
-  background-color: #9999ff;
-  opacity: .4;  
-}
-.Grid-item-3:hover {
-  background-color: #6666ff;
-}
-.Grid-item-4 {
-  grid-column: 1/4;
-  grid-row: 4;
-  text-align: center;
-  background-color: #9999ff;
-  opacity: .5;
-}
-.Grid-item-4:hover {
-  background-color: #6666ff;
-}
-.Grid-item-5 {
-  grid-column: 1/4;
-  grid-row: 5;
-  text-align: center;
-  background-color: #9999ff;
-  opacity: .6;
-}
-.Grid-item-5:hover {
-  background-color: #6666ff;
-}
-.Grid-item-6 {
-  grid-column: 1/4;
-  grid-row: 6;
-  text-align: center;
-  background-color: #9999ff;
-  opacity: .7;
-}
-.Grid-item-6:hover {
-  background-color: #6666ff;
-}
-.Grid-item-7 {
-  grid-column: 1/4;
-  grid-row: 7;
-  text-align: center;
-  background-color: #9999ff;
-  opacity: .8;
-}
-.Grid-item-7:hover {
-  background-color: #6666ff;
+  border: 1px solid darkblue;
 }
 .Grid-container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-auto-rows: minmax(100px, auto);
   /* justify-content: space-evenly; */
   /* grid-gap: 50px 50px; */
