--- a/css_grid/src/components/FirstLine/FirstLine.css
+++ b/css_grid/src/components/FirstLine/FirstLine.css
@@ -1,27 +1,47 @@
 .First-Line-1 {
   grid-column: 1/2;
   grid-row: 1;
-  background-color: red;
-  border: 3px solid darkblue;
+  border: 1px solid darkblue;
   color: darkblue;
   font-size: 1.5em;
 }
 .First-Line-2 {
   grid-column: 2/3;
   grid-row: 1;
-  background-color: red;
+  border: 1px solid darkblue;
   color: darkblue;
   font-size: 1.5em;
 }
 .First-Line-3 {
   grid-column: 3/4;
   grid-row: 1;
-  background-color: red;
+  border: 1px solid darkblue;
+  color: darkblue;
+  font-size: 1.5em;
+}
+.First-Line-4 {
+  grid-column: 4/5;
+  grid-row: 1;
+  border: 1px solid darkblue;
+  color: darkblue;
+  font-size: 1.5em;
+}
+.First-Line-5 {
+  grid-column: 5/6;
+  grid-row: 1;
+  border: 1px solid darkblue;
+  color: darkblue;
+  font-size: 1.5em;
+}
+.First-Line-6 {
+  grid-column: 6/7;
+  grid-row: 1;
+  border: 1px solid darkblue;
   color: darkblue;
   font-size: 1.5em;
 }
 .Grid-item-1 {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-auto-rows: minmax(100px, auto);
 }
